--- a/bigbluebutton-client/src/org/bigbluebutton/modules/users/maps/UsersMainEventMap.mxml
+++ b/bigbluebutton-client/src/org/bigbluebutton/modules/users/maps/UsersMainEventMap.mxml
@@ -23,7 +23,8 @@ with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 <EventMap xmlns:mx="http://www.adobe.com/2006/mxml" xmlns="http://mate.asfusion.com/" >
 	<mx:Script>
 		<![CDATA[
-      import mx.events.FlexEvent;    
+      import mx.events.FlexEvent;
+      
       import org.bigbluebutton.core.events.LockControlEvent;
       import org.bigbluebutton.core.events.VoiceConfEvent;
       import org.bigbluebutton.main.events.BBBEvent;
@@ -37,6 +38,7 @@ with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
       import org.bigbluebutton.main.model.users.events.RaiseHandEvent;
       import org.bigbluebutton.main.model.users.events.RoleChangeEvent;
       import org.bigbluebutton.main.model.users.events.UsersConnectionEvent;
+      import org.bigbluebutton.modules.users.events.InviteUserIntoVoiceConfRequest;
 		]]>
 	</mx:Script>
 	
@@ -106,6 +108,10 @@ with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
   
   <EventHandlers type="{VoiceConfEvent.UNMUTE_ALL}" >
     <MethodInvoker generator="{UserService}" method="unmuteAllUsers" arguments="{event}" />
+  </EventHandlers>
+  
+  <EventHandlers type="{InviteUserIntoVoiceConfRequest.INVITE_USER_INTO_VOICE_CONF}" >
+    <MethodInvoker generator="{UserService}" method="inviteUserIntoVoiceConference" arguments="{event}" />
   </EventHandlers>
   
   <EventHandlers type="{VoiceConfEvent.MUTE_ALMOST_ALL}" >
